# sutego-back-TCP

./: Dockerfile  Info.plist  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_tcp.yml
api/: main.py
